The file content updates

--- a/CNN RF GB Model Compare.ipynb
+++ b/CNN RF GB Model Compare.ipynb
@@ -345,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Factorsing and Taking Dummy variables"
+    "### Factorising and Extracting Dummy variables"
    ]
   },
   {
